:bug: bug(forms.css): Fixed overflow of multiselect

--- a/src/core/forms.css
+++ b/src/core/forms.css
@@ -60,7 +60,6 @@ input[type=text].input-focused,
 select {
     background-color: #fff;
     border: 1px solid #ddd;
-    -webkit-appearance: menulist;
 }
 
 select[multiple] option {
